--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -774,7 +774,7 @@ height: 40px;
 }
 #tools .section-title {
   text-align: center;
-  padding: 30px 10px 0;
+  padding: 10px 10px 0;
   position: relative;
   margin: 0;
 }
@@ -784,7 +784,7 @@ height: 40px;
   text-transform: uppercase;
   margin-bottom: 0;
   padding-bottom: 0;
-  color: rgb(255, 255, 255);
+  color: #ffb727;
   position: relative;
   z-index: 2;
 }
@@ -837,6 +837,10 @@ height: 40px;
 #tools .fas{
   margin: 7px;
  color: #ffb727;
+}
+
+#tools .custom-icon-size {
+  font-size: 1.5em; /* Adjust the value as needed */
 }
 .tools .tools-carousel, .tools .tools-slider {
   overflow: hidden;
@@ -950,7 +954,7 @@ height: 40px;
 }
 .portfolio .portfolio-wrap::before {
   content: "";
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(255, 255, 255, 0.9);
   position: absolute;
   left: 30px;
   right: 30px;
@@ -999,16 +1003,16 @@ height: 40px;
 }
 .portfolio .portfolio-wrap .portfolio-info h4 {
   font-size: 20px;
-  color: #ffb727;
+  color: #45505b;
   font-weight: 600;
 }
 .portfolio .portfolio-wrap .portfolio-info h5 {
   font-size: 14px;
   margin-top: 10px;
-  color: #ffb727;  
+  color: #45505b;  
 }
 .portfolio .portfolio-wrap .portfolio-info p {
-  color: #ffb727;
+  color: #45505b;
   font-size: 14px;  
   padding: 0;
   margin: 0;
@@ -1018,7 +1022,7 @@ height: 40px;
   z-index: 4;
 }
 .portfolio .portfolio-wrap .portfolio-links a {
-  color: #ffb727;  
+  color: #45505b;  
   margin: 0 0px;
   font-size: 28px;
   display: inline-block;
